# crowd-security-metrics

./: .gitignore  CMakeLists.txt  README.md  run.bat
FrameServer/: main.cpp
FrameServer/include/: Client.h
FrameServer/src/: Client.cpp
include/: Compat.h  Data.h  MaskRCNN.h  Memory.hpp  Server.h  UIManager.h  postprocess.h  preprocess.h
include/Views/: InterfaceView.h  SourceView.h  View.h
pymodels/: pymodel.py
src/: MaskRCNN.cpp  Server.cpp  UIManager.cpp  main.cpp  postprocess.cpp  preprocess.cpp
src/Views/: InterfaceView.cpp  SourceVIew.cpp  View.cpp
